[package]
name = "twitter-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.13"
anyhow = "1.0.95"
chrono = "0.4.39"
twapi-v2 = { version = "0.17.1", features = ["oauth10a"] }
